// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`fixtures > tests/fixtures/basic.vue > isProduction = false 1`] = `
"// basic.js
import { defineComponent, renderSlot } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /*@__PURE__*/ defineComponent({
	__name: "basic",
	props: {
		base: {
			type: String,
			required: true
		},
		str: {
			type: String,
			required: true
		},
		num: {
			type: Number,
			required: true
		},
		map: {
			type: Map,
			required: true
		},
		arr: {
			type: Array,
			required: true
		},
		union: {
			type: [String, Number],
			required: true
		}
	},
	emits: ["click", "change"],
	setup(__props, { expose: __expose }) {
		__expose();
		const __returned__ = {};
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  return renderSlot(_ctx.$slots, "default");
}
var basic = /* @__PURE__ */ _export_sfc(_sfc_main, [["render", _sfc_render], __FILE__]);

export { basic as default };
"
`;

exports[`fixtures > tests/fixtures/basic.vue > isProduction = true 1`] = `
"// basic.js
import { defineComponent, renderSlot } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /*@__PURE__*/ defineComponent({
	__name: "basic",
	props: {
		base: null,
		str: null,
		num: null,
		map: null,
		arr: null,
		union: null
	},
	emits: ["click", "change"],
	setup(__props, { expose: __expose }) {
		__expose();
		const __returned__ = {};
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  return renderSlot(_ctx.$slots, "default");
}
var basic = /* @__PURE__ */ _export_sfc(_sfc_main, [["render", _sfc_render], __FILE__]);

export { basic as default };
"
`;

exports[`fixtures > tests/fixtures/built-in.vue > isProduction = false 1`] = `
"// built-in.js
import { defineComponent } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /*@__PURE__*/ defineComponent({
	__name: "built-in",
	props: {
		optional: {
			type: Number,
			required: false
		},
		required: {
			type: Boolean,
			required: true
		},
		readonly: {
			type: String,
			required: true
		}
	},
	setup(__props, { expose: __expose }) {
		__expose();
		const __returned__ = {};
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

var builtIn = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { builtIn as default };
"
`;

exports[`fixtures > tests/fixtures/built-in.vue > isProduction = true 1`] = `
"// built-in.js
import { defineComponent } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /*@__PURE__*/ defineComponent({
	__name: "built-in",
	props: {
		optional: null,
		required: { type: Boolean },
		readonly: null
	},
	setup(__props, { expose: __expose }) {
		__expose();
		const __returned__ = {};
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

var builtIn = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { builtIn as default };
"
`;

exports[`fixtures > tests/fixtures/defaults-dynamic.vue > isProduction = false 1`] = `
"// defaults-dynamic.js
import { defineComponent, mergeDefaults, createElementBlock, openBlock } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /*@__PURE__*/ defineComponent({
	__name: "defaults-dynamic",
	props: mergeDefaults({ foo: {
		type: String,
		required: false
	} }, { ["f" + "oo"]: "foo" }),
	setup(__props, { expose: __expose }) {
		__expose();
		const __returned__ = {};
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  return openBlock(), createElementBlock("div");
}
var defaultsDynamic = /* @__PURE__ */ _export_sfc(_sfc_main, [["render", _sfc_render], __FILE__]);

export { defaultsDynamic as default };
"
`;

exports[`fixtures > tests/fixtures/defaults-dynamic.vue > isProduction = true 1`] = `
"// defaults-dynamic.js
import { defineComponent, mergeDefaults, createElementBlock, openBlock } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /*@__PURE__*/ defineComponent({
	__name: "defaults-dynamic",
	props: mergeDefaults({ foo: null }, { ["f" + "oo"]: "foo" }),
	setup(__props, { expose: __expose }) {
		__expose();
		const __returned__ = {};
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  return openBlock(), createElementBlock("div");
}
var defaultsDynamic = /* @__PURE__ */ _export_sfc(_sfc_main, [["render", _sfc_render], __FILE__]);

export { defaultsDynamic as default };
"
`;

exports[`fixtures > tests/fixtures/defaults-static.vue > isProduction = false 1`] = `
"// defaults-static.js
import { defineComponent, createElementBlock, openBlock } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /*@__PURE__*/ defineComponent({
	__name: "defaults-static",
	props: {
		foo: {
			type: String,
			required: false,
			default: "foo"
		},
		bar: {
			type: Number,
			required: false,
			get default() {
				return 10;
			}
		},
		baz: {
			type: Promise,
			required: false,
			async default() {
				return 10;
			}
		},
		qux: {
			type: Function,
			required: false,
			default: () => {}
		},
		quux: {
			required: false,
			default: abc
		}
	},
	setup(__props, { expose: __expose }) {
		__expose();
		const __returned__ = {};
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  return openBlock(), createElementBlock("div");
}
var defaultsStatic = /* @__PURE__ */ _export_sfc(_sfc_main, [["render", _sfc_render], __FILE__]);

export { defaultsStatic as default };
"
`;

exports[`fixtures > tests/fixtures/defaults-static.vue > isProduction = true 1`] = `
"// defaults-static.js
import { defineComponent, createElementBlock, openBlock } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /*@__PURE__*/ defineComponent({
	__name: "defaults-static",
	props: {
		foo: { default: "foo" },
		bar: { get default() {
			return 10;
		} },
		baz: { async default() {
			return 10;
		} },
		qux: {
			type: Function,
			default: () => {}
		},
		quux: { default: abc }
	},
	setup(__props, { expose: __expose }) {
		__expose();
		const __returned__ = {};
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  return openBlock(), createElementBlock("div");
}
var defaultsStatic = /* @__PURE__ */ _export_sfc(_sfc_main, [["render", _sfc_render], __FILE__]);

export { defaultsStatic as default };
"
`;

exports[`fixtures > tests/fixtures/fn-default.vue > isProduction = false 1`] = `
"// fn-default.js
import { defineComponent } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /*@__PURE__*/ defineComponent({
	__name: "fn-default",
	props: { fn: {
		type: Function,
		required: true,
		default: () => {}
	} },
	setup(__props, { expose: __expose }) {
		__expose();
		const props = __props;
		const __returned__ = { props };
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

var fnDefault = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { fnDefault as default };
"
`;

exports[`fixtures > tests/fixtures/fn-default.vue > isProduction = true 1`] = `
"// fn-default.js
import { defineComponent } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /*@__PURE__*/ defineComponent({
	__name: "fn-default",
	props: { fn: {
		type: Function,
		default: () => {}
	} },
	setup(__props, { expose: __expose }) {
		__expose();
		const props = __props;
		const __returned__ = { props };
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

var fnDefault = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { fnDefault as default };
"
`;

exports[`fixtures > tests/fixtures/import-from-vue.vue > isProduction = false 1`] = `
"// import-from-vue.js
import { defineComponent, renderSlot } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /*@__PURE__*/ defineComponent({
	__name: "import-from-vue",
	props: {
		setupBase: {
			type: String,
			required: true
		},
		num: {
			type: Number,
			required: true
		},
		bool: {
			type: Boolean,
			required: true
		},
		map: {
			type: Map,
			required: true
		},
		arr: {
			type: Array,
			required: true
		},
		union: {
			type: [String, Number],
			required: true
		},
		normalBase: {
			type: String,
			required: true
		},
		str: {
			type: String,
			required: true
		},
		setupBase_2: {
			type: String,
			required: true
		}
	},
	emits: ["click", "change"],
	setup(__props, { expose: __expose }) {
		__expose();
		const __returned__ = {};
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  return renderSlot(_ctx.$slots, "default");
}
var importFromVue = /* @__PURE__ */ _export_sfc(_sfc_main, [["render", _sfc_render], __FILE__]);

export { importFromVue as default };
"
`;

exports[`fixtures > tests/fixtures/import-from-vue.vue > isProduction = true 1`] = `
"// import-from-vue.js
import { defineComponent, renderSlot } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /*@__PURE__*/ defineComponent({
	__name: "import-from-vue",
	props: {
		setupBase: null,
		num: null,
		bool: { type: Boolean },
		map: null,
		arr: null,
		union: null,
		normalBase: null,
		str: null,
		setupBase_2: null
	},
	emits: ["click", "change"],
	setup(__props, { expose: __expose }) {
		__expose();
		const __returned__ = {};
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  return renderSlot(_ctx.$slots, "default");
}
var importFromVue = /* @__PURE__ */ _export_sfc(_sfc_main, [["render", _sfc_render], __FILE__]);

export { importFromVue as default };
"
`;

exports[`fixtures > tests/fixtures/intersection.vue > isProduction = false 1`] = `
"// intersection.js
import { defineComponent, renderSlot } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /*@__PURE__*/ defineComponent({
	__name: "intersection",
	props: {
		base: {
			type: String,
			required: true
		},
		str: {
			type: String,
			required: true
		},
		num: {
			type: Number,
			required: true
		},
		map: {
			type: Map,
			required: true
		},
		arr: {
			type: Array,
			required: true
		},
		union: {
			type: [String, Number],
			required: true
		}
	},
	setup(__props, { expose: __expose }) {
		__expose();
		const __returned__ = {};
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  return renderSlot(_ctx.$slots, "default");
}
var intersection = /* @__PURE__ */ _export_sfc(_sfc_main, [["render", _sfc_render], __FILE__]);

export { intersection as default };
"
`;

exports[`fixtures > tests/fixtures/intersection.vue > isProduction = true 1`] = `
"// intersection.js
import { defineComponent, renderSlot } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /*@__PURE__*/ defineComponent({
	__name: "intersection",
	props: {
		base: null,
		str: null,
		num: null,
		map: null,
		arr: null,
		union: null
	},
	setup(__props, { expose: __expose }) {
		__expose();
		const __returned__ = {};
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  return renderSlot(_ctx.$slots, "default");
}
var intersection = /* @__PURE__ */ _export_sfc(_sfc_main, [["render", _sfc_render], __FILE__]);

export { intersection as default };
"
`;

exports[`fixtures > tests/fixtures/issue-260.vue > isProduction = false 1`] = `
"// issue-260.js
import { defineComponent, toDisplayString } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /*@__PURE__*/ defineComponent({
	__name: "issue-260",
	props: { menu: {
		type: [Object, Array],
		required: false,
		default: () => ({ txt: "1-1" })
	} },
	setup(__props, { expose: __expose }) {
		__expose();
		const props = __props;
		const __returned__ = { props };
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  return toDisplayString($setup.props.menu);
}
var issue260 = /* @__PURE__ */ _export_sfc(_sfc_main, [["render", _sfc_render], __FILE__]);

export { issue260 as default };
"
`;

exports[`fixtures > tests/fixtures/issue-260.vue > isProduction = true 1`] = `
"// issue-260.js
import { defineComponent, toDisplayString } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /*@__PURE__*/ defineComponent({
	__name: "issue-260",
	props: { menu: { default: () => ({ txt: "1-1" }) } },
	setup(__props, { expose: __expose }) {
		__expose();
		const props = __props;
		const __returned__ = { props };
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  return toDisplayString($setup.props.menu);
}
var issue260 = /* @__PURE__ */ _export_sfc(_sfc_main, [["render", _sfc_render], __FILE__]);

export { issue260 as default };
"
`;

exports[`fixtures > tests/fixtures/issue-328.vue > isProduction = false 1`] = `
"// issue-328.js
import { defineComponent } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /*@__PURE__*/ defineComponent({
	__name: "issue-328",
	emits: ["foo"],
	setup(__props, { expose: __expose }) {
		__expose();
		const __returned__ = {};
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

var issue328 = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { issue328 as default };
"
`;

exports[`fixtures > tests/fixtures/issue-328.vue > isProduction = true 1`] = `
"// issue-328.js
import { defineComponent } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /*@__PURE__*/ defineComponent({
	__name: "issue-328",
	emits: ["foo"],
	setup(__props, { expose: __expose }) {
		__expose();
		const __returned__ = {};
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

var issue328 = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { issue328 as default };
"
`;

exports[`fixtures > tests/fixtures/issue-351.vue > isProduction = false 1`] = `
"// issue-351.js
import { defineComponent } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /*@__PURE__*/ defineComponent({
	__name: "issue-351",
	props: { modelValue: {
		type: [String, Boolean],
		required: true
	} },
	setup(__props, { expose: __expose }) {
		__expose();
		const __returned__ = {};
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

var issue351 = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { issue351 as default };
"
`;

exports[`fixtures > tests/fixtures/issue-351.vue > isProduction = true 1`] = `
"// issue-351.js
import { defineComponent } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /*@__PURE__*/ defineComponent({
	__name: "issue-351",
	props: { modelValue: { type: [String, Boolean] } },
	setup(__props, { expose: __expose }) {
		__expose();
		const __returned__ = {};
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

var issue351 = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { issue351 as default };
"
`;

exports[`fixtures > tests/fixtures/issue-362.vue > isProduction = false 1`] = `
"// issue-362.js
import { defineComponent, createElementBlock, openBlock, toDisplayString } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /*@__PURE__*/ defineComponent({
	__name: "issue-362",
	props: { trigger: { required: true } },
	setup(__props, { expose: __expose }) {
		__expose();
		const Trigger = {
			click: "click",
			focus: "focus",
			hover: "hover"
		};
		const props = __props;
		const __returned__ = {
			Trigger,
			props
		};
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  return openBlock(), createElementBlock(
    "button",
    null,
    toDisplayString($props.trigger),
    1
    /* TEXT */
  );
}
var issue362 = /* @__PURE__ */ _export_sfc(_sfc_main, [["render", _sfc_render], __FILE__]);

export { issue362 as default };
"
`;

exports[`fixtures > tests/fixtures/issue-362.vue > isProduction = true 1`] = `
"// issue-362.js
import { defineComponent, createElementBlock, openBlock, toDisplayString } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /*@__PURE__*/ defineComponent({
	__name: "issue-362",
	props: { trigger: null },
	setup(__props, { expose: __expose }) {
		__expose();
		const Trigger = {
			click: "click",
			focus: "focus",
			hover: "hover"
		};
		const props = __props;
		const __returned__ = {
			Trigger,
			props
		};
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  return openBlock(), createElementBlock(
    "button",
    null,
    toDisplayString($props.trigger),
    1
    /* TEXT */
  );
}
var issue362 = /* @__PURE__ */ _export_sfc(_sfc_main, [["render", _sfc_render], __FILE__]);

export { issue362 as default };
"
`;

exports[`fixtures > tests/fixtures/issue-806.vue > isProduction = false 1`] = `
"// issue-806.js
import { defineComponent } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /*@__PURE__*/ defineComponent({
	__name: "issue-806",
	props: { foo: {
		type: [Function, Object],
		required: false
	} },
	setup(__props, { expose: __expose }) {
		__expose();
		const __returned__ = {};
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

var issue806 = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { issue806 as default };
"
`;

exports[`fixtures > tests/fixtures/issue-806.vue > isProduction = true 1`] = `
"// issue-806.js
import { defineComponent } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /*@__PURE__*/ defineComponent({
	__name: "issue-806",
	props: { foo: { type: Function } },
	setup(__props, { expose: __expose }) {
		__expose();
		const __returned__ = {};
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

var issue806 = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { issue806 as default };
"
`;

exports[`fixtures > tests/fixtures/json-resolve.vue > isProduction = false 1`] = `
"// json-resolve.js
import { defineComponent } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var foo = "bar";
var pkg = {
	foo: foo
};

var _sfc_main = /*@__PURE__*/ defineComponent({
	__name: "json-resolve",
	props: {
		foo: {
			type: String,
			required: true
		},
		bar: {
			type: Object,
			required: false
		}
	},
	setup(__props, { expose: __expose }) {
		__expose();
		const props = __props;
		const __returned__ = {
			props,
			get pkg() {
				return pkg;
			}
		};
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

var jsonResolve = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { jsonResolve as default };
"
`;

exports[`fixtures > tests/fixtures/json-resolve.vue > isProduction = true 1`] = `
"// json-resolve.js
import { defineComponent } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var foo = "bar";
var pkg = {
	foo: foo
};

var _sfc_main = /*@__PURE__*/ defineComponent({
	__name: "json-resolve",
	props: {
		foo: null,
		bar: null
	},
	setup(__props, { expose: __expose }) {
		__expose();
		const props = __props;
		const __returned__ = {
			props,
			get pkg() {
				return pkg;
			}
		};
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

var jsonResolve = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { jsonResolve as default };
"
`;

exports[`fixtures > tests/fixtures/namespace.vue > isProduction = false 1`] = `
"// namespace.js
import { defineComponent } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /*@__PURE__*/ defineComponent({
	__name: "namespace",
	props: {
		x: {
			type: Boolean,
			required: true
		},
		y: {
			type: Number,
			required: true
		},
		z: {
			type: String,
			required: true
		}
	},
	setup(__props, { expose: __expose }) {
		__expose();
		const __returned__ = {};
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

var namespace = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { namespace as default };
"
`;

exports[`fixtures > tests/fixtures/namespace.vue > isProduction = true 1`] = `
"// namespace.js
import { defineComponent } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /*@__PURE__*/ defineComponent({
	__name: "namespace",
	props: {
		x: { type: Boolean },
		y: null,
		z: null
	},
	setup(__props, { expose: __expose }) {
		__expose();
		const __returned__ = {};
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

var namespace = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { namespace as default };
"
`;

exports[`fixtures > tests/fixtures/optional-method.vue > isProduction = false 1`] = `
"// optional-method.js
import { defineComponent } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /*@__PURE__*/ defineComponent({
	__name: "optional-method",
	props: {
		onClick: {
			type: Function,
			required: false
		},
		onSubmit: {
			type: Function,
			required: false
		}
	},
	setup(__props, { expose: __expose }) {
		__expose();
		const __returned__ = {};
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

var optionalMethod = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { optionalMethod as default };
"
`;

exports[`fixtures > tests/fixtures/optional-method.vue > isProduction = true 1`] = `
"// optional-method.js
import { defineComponent } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /*@__PURE__*/ defineComponent({
	__name: "optional-method",
	props: {
		onClick: { type: Function },
		onSubmit: { type: Function }
	},
	setup(__props, { expose: __expose }) {
		__expose();
		const __returned__ = {};
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

var optionalMethod = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { optionalMethod as default };
"
`;

exports[`fixtures > tests/fixtures/playground.vue > isProduction = false 1`] = `
"// playground.js
import { defineComponent } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /*@__PURE__*/ defineComponent({
	__name: "playground",
	props: { foo: { required: true } },
	setup(__props, { expose: __expose }) {
		__expose();
		const __returned__ = {};
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

var playground = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { playground as default };
"
`;

exports[`fixtures > tests/fixtures/playground.vue > isProduction = true 1`] = `
"// playground.js
import { defineComponent } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /*@__PURE__*/ defineComponent({
	__name: "playground",
	props: { foo: null },
	setup(__props, { expose: __expose }) {
		__expose();
		const __returned__ = {};
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

var playground = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { playground as default };
"
`;

exports[`fixtures > tests/fixtures/radix-vue.vue > isProduction = false 1`] = `
"// radix-vue.js
import { defineComponent } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /*@__PURE__*/ defineComponent({
	__name: "radix-vue",
	props: {
		asChild: {
			type: Boolean,
			required: false
		},
		as: {
			type: [
				String,
				Object,
				Function
			],
			required: false
		},
		foo: {
			type: String,
			required: false
		}
	},
	setup(__props, { expose: __expose }) {
		__expose();
		const __returned__ = {};
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

var radixVue = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { radixVue as default };
"
`;

exports[`fixtures > tests/fixtures/radix-vue.vue > isProduction = true 1`] = `
"// radix-vue.js
import { defineComponent } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /*@__PURE__*/ defineComponent({
	__name: "radix-vue",
	props: {
		asChild: { type: Boolean },
		as: { type: Function },
		foo: null
	},
	setup(__props, { expose: __expose }) {
		__expose();
		const __returned__ = {};
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

var radixVue = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { radixVue as default };
"
`;

exports[`fixtures > tests/fixtures/resolve-failed.vue > isProduction = false 1`] = `
"// resolve-failed.js
import { defineComponent } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /*@__PURE__*/ defineComponent({
	__name: "resolve-failed",
	props: {
		foo: { required: true },
		bar: {
			type: Object,
			required: true
		},
		bool: {
			type: Boolean,
			skipCheck: true,
			required: true
		},
		fun: {
			type: Function,
			skipCheck: true,
			required: true
		},
		boolAndFun: {
			type: [Boolean, Function],
			skipCheck: true,
			required: true
		}
	},
	setup(__props, { expose: __expose }) {
		__expose();
		const __returned__ = {};
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

var resolveFailed = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { resolveFailed as default };
"
`;

exports[`fixtures > tests/fixtures/resolve-failed.vue > isProduction = true 1`] = `
"// resolve-failed.js
import { defineComponent } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /*@__PURE__*/ defineComponent({
	__name: "resolve-failed",
	props: {
		foo: null,
		bar: null,
		bool: { type: Boolean },
		fun: { type: Function },
		boolAndFun: { type: [Boolean, Function] }
	},
	setup(__props, { expose: __expose }) {
		__expose();
		const __returned__ = {};
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

var resolveFailed = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { resolveFailed as default };
"
`;

exports[`fixtures > tests/fixtures/short-emits.vue > isProduction = false 1`] = `
"// short-emits.js
import { defineComponent, createElementBlock, openBlock } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /*@__PURE__*/ defineComponent({
	__name: "short-emits",
	emits: ["click"],
	setup(__props, { expose: __expose, emit: __emit }) {
		__expose();
		const emit = __emit;
		const __returned__ = { emit };
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  return openBlock(), createElementBlock("button", {
    onClick: _cache[0] || (_cache[0] = ($event) => $setup.emit("click"))
  }, "click");
}
var shortEmits = /* @__PURE__ */ _export_sfc(_sfc_main, [["render", _sfc_render], __FILE__]);

export { shortEmits as default };
"
`;

exports[`fixtures > tests/fixtures/short-emits.vue > isProduction = true 1`] = `
"// short-emits.js
import { defineComponent, createElementBlock, openBlock } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /*@__PURE__*/ defineComponent({
	__name: "short-emits",
	emits: ["click"],
	setup(__props, { expose: __expose, emit: __emit }) {
		__expose();
		const emit = __emit;
		const __returned__ = { emit };
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  return openBlock(), createElementBlock("button", {
    onClick: _cache[0] || (_cache[0] = ($event) => $setup.emit("click"))
  }, "click");
}
var shortEmits = /* @__PURE__ */ _export_sfc(_sfc_main, [["render", _sfc_render], __FILE__]);

export { shortEmits as default };
"
`;

exports[`fixtures > tests/fixtures/special-key.vue > isProduction = false 1`] = `
"// special-key.js
import { defineComponent } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /*@__PURE__*/ defineComponent({
	__name: "special-key",
	props: { "key-name": {
		type: String,
		required: false
	} },
	setup(__props, { expose: __expose }) {
		__expose();
		const __returned__ = {};
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

var specialKey = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { specialKey as default };
"
`;

exports[`fixtures > tests/fixtures/special-key.vue > isProduction = true 1`] = `
"// special-key.js
import { defineComponent } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /*@__PURE__*/ defineComponent({
	__name: "special-key",
	props: { "key-name": null },
	setup(__props, { expose: __expose }) {
		__expose();
		const __returned__ = {};
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

var specialKey = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { specialKey as default };
"
`;

exports[`fixtures > tests/fixtures/template-keys.vue > isProduction = false 1`] = `
"// template-keys.js
import { defineComponent } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /*@__PURE__*/ defineComponent({
	__name: "template-keys",
	props: {
		"TfooSxZ0strstatic_value'": {
			type: String,
			required: true
		},
		"TfooSxZ1strstatic_value'": {
			type: String,
			required: true
		},
		"TfooSyZ0strstatic_value'": {
			type: String,
			required: true
		},
		"TfooSyZ1strstatic_value'": {
			type: String,
			required: true
		},
		"TbarSxZ0strstatic_value'": {
			type: String,
			required: true
		},
		"TbarSxZ1strstatic_value'": {
			type: String,
			required: true
		},
		"TbarSyZ0strstatic_value'": {
			type: String,
			required: true
		},
		"TbarSyZ1strstatic_value'": {
			type: String,
			required: true
		},
		extra: {
			type: String,
			required: true
		}
	},
	setup(__props, { expose: __expose }) {
		__expose();
		const __returned__ = {};
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

var templateKeys = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { templateKeys as default };
"
`;

exports[`fixtures > tests/fixtures/template-keys.vue > isProduction = true 1`] = `
"// template-keys.js
import { defineComponent } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /*@__PURE__*/ defineComponent({
	__name: "template-keys",
	props: {
		"TfooSxZ0strstatic_value'": null,
		"TfooSxZ1strstatic_value'": null,
		"TfooSyZ0strstatic_value'": null,
		"TfooSyZ1strstatic_value'": null,
		"TbarSxZ0strstatic_value'": null,
		"TbarSxZ1strstatic_value'": null,
		"TbarSyZ0strstatic_value'": null,
		"TbarSyZ1strstatic_value'": null,
		extra: null
	},
	setup(__props, { expose: __expose }) {
		__expose();
		const __returned__ = {};
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

var templateKeys = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { templateKeys as default };
"
`;

exports[`fixtures > tests/fixtures/ts-indexed-access-type.vue > isProduction = false 1`] = `
"// ts-indexed-access-type.js
import { defineComponent } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /*@__PURE__*/ defineComponent({
	__name: "ts-indexed-access-type",
	props: {
		foo: {
			type: String,
			required: true
		},
		bar: { required: true },
		baz: { required: true },
		qux: { required: true },
		all: { required: true },
		arr: {
			type: [String, Number],
			required: true
		},
		arr2: {
			type: [String, Number],
			required: true
		},
		tuple: {
			type: [String, Boolean],
			required: true
		},
		methodFoo: {
			type: Function,
			required: true
		},
		methodBar: {
			type: Function,
			required: true
		},
		methodOpt: {
			type: Function,
			skipCheck: true,
			required: true
		}
	},
	setup(__props, { expose: __expose }) {
		__expose();
		const __returned__ = {};
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

var tsIndexedAccessType = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { tsIndexedAccessType as default };
"
`;

exports[`fixtures > tests/fixtures/ts-indexed-access-type.vue > isProduction = true 1`] = `
"// ts-indexed-access-type.js
import { defineComponent } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /*@__PURE__*/ defineComponent({
	__name: "ts-indexed-access-type",
	props: {
		foo: null,
		bar: null,
		baz: null,
		qux: null,
		all: null,
		arr: null,
		arr2: null,
		tuple: { type: [String, Boolean] },
		methodFoo: { type: Function },
		methodBar: { type: Function },
		methodOpt: { type: Function }
	},
	setup(__props, { expose: __expose }) {
		__expose();
		const __returned__ = {};
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

var tsIndexedAccessType = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { tsIndexedAccessType as default };
"
`;

exports[`fixtures > tests/fixtures/ts-utility-types.vue > isProduction = false 1`] = `
"// ts-utility-types.js
import { defineComponent } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /*@__PURE__*/ defineComponent({
	__name: "ts-utility-types",
	props: {
		foo: {
			type: String,
			required: true
		},
		bar: {
			type: String,
			required: true
		}
	},
	setup(__props, { expose: __expose }) {
		__expose();
		const __returned__ = {};
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

var tsUtilityTypes = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { tsUtilityTypes as default };
"
`;

exports[`fixtures > tests/fixtures/ts-utility-types.vue > isProduction = true 1`] = `
"// ts-utility-types.js
import { defineComponent } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /*@__PURE__*/ defineComponent({
	__name: "ts-utility-types",
	props: {
		foo: null,
		bar: null
	},
	setup(__props, { expose: __expose }) {
		__expose();
		const __returned__ = {};
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

var tsUtilityTypes = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { tsUtilityTypes as default };
"
`;

exports[`fixtures > tests/fixtures/undefined.vue > isProduction = false 1`] = `
"// undefined.js
import { defineComponent } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /*@__PURE__*/ defineComponent({
	__name: "undefined",
	props: { foo: { required: true } },
	setup(__props, { expose: __expose }) {
		__expose();
		const __returned__ = {};
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

var _undefined = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { _undefined as default };
"
`;

exports[`fixtures > tests/fixtures/undefined.vue > isProduction = true 1`] = `
"// undefined.js
import { defineComponent } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /*@__PURE__*/ defineComponent({
	__name: "undefined",
	props: { foo: null },
	setup(__props, { expose: __expose }) {
		__expose();
		const __returned__ = {};
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

var _undefined = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { _undefined as default };
"
`;

exports[`fixtures > tests/fixtures/union.vue > isProduction = false 1`] = `
"// union.js
import { defineComponent } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /*@__PURE__*/ defineComponent({
	__name: "union",
	props: {
		type: {
			type: String,
			required: true
		},
		foo: {
			type: String,
			required: false
		},
		optional: {
			type: Boolean,
			required: false
		},
		bar: {
			type: Number,
			required: false
		}
	},
	setup(__props, { expose: __expose }) {
		__expose();
		const __returned__ = {};
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

var union = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { union as default };
"
`;

exports[`fixtures > tests/fixtures/union.vue > isProduction = true 1`] = `
"// union.js
import { defineComponent } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /*@__PURE__*/ defineComponent({
	__name: "union",
	props: {
		type: null,
		foo: null,
		optional: { type: Boolean },
		bar: null
	},
	setup(__props, { expose: __expose }) {
		__expose();
		const __returned__ = {};
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

var union = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { union as default };
"
`;

exports[`fixtures > tests/fixtures/union-emits.vue > isProduction = false 1`] = `
"// union-emits.js
import { defineComponent } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /*@__PURE__*/ defineComponent({
	__name: "union-emits",
	emits: [
		"some",
		"emit",
		"another"
	],
	setup(__props, { expose: __expose, emit: __emit }) {
		__expose();
		const emit = __emit;
		const __returned__ = { emit };
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

var unionEmits = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { unionEmits as default };
"
`;

exports[`fixtures > tests/fixtures/union-emits.vue > isProduction = true 1`] = `
"// union-emits.js
import { defineComponent } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /*@__PURE__*/ defineComponent({
	__name: "union-emits",
	emits: [
		"some",
		"emit",
		"another"
	],
	setup(__props, { expose: __expose, emit: __emit }) {
		__expose();
		const emit = __emit;
		const __returned__ = { emit };
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

var unionEmits = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { unionEmits as default };
"
`;

exports[`fixtures > tests/fixtures/union-props.vue > isProduction = false 1`] = `
"// union-props.js
import { defineComponent } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /*@__PURE__*/ defineComponent({
	__name: "union-props",
	props: {
		foo: {
			type: [String, Number],
			required: true
		},
		bar: {
			type: [String, Number],
			required: true
		},
		optional: {
			type: Boolean,
			required: false
		}
	},
	setup(__props, { expose: __expose }) {
		__expose();
		const __returned__ = {};
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

var unionProps = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { unionProps as default };
"
`;

exports[`fixtures > tests/fixtures/union-props.vue > isProduction = true 1`] = `
"// union-props.js
import { defineComponent } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /*@__PURE__*/ defineComponent({
	__name: "union-props",
	props: {
		foo: null,
		bar: null,
		optional: { type: Boolean }
	},
	setup(__props, { expose: __expose }) {
		__expose();
		const __returned__ = {};
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

var unionProps = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { unionProps as default };
"
`;

exports[`fixtures > tests/fixtures/unresolved.vue > isProduction = false 1`] = `
"// unresolved.js
import { defineComponent } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /*@__PURE__*/ defineComponent({
	__name: "unresolved",
	props: { foo: { required: true } },
	setup(__props, { expose: __expose }) {
		__expose();
		const __returned__ = {};
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

var unresolved = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { unresolved as default };
"
`;

exports[`fixtures > tests/fixtures/unresolved.vue > isProduction = true 1`] = `
"// unresolved.js
import { defineComponent } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /*@__PURE__*/ defineComponent({
	__name: "unresolved",
	props: { foo: null },
	setup(__props, { expose: __expose }) {
		__expose();
		const __returned__ = {};
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

var unresolved = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { unresolved as default };
"
`;

exports[`fixtures > tests/fixtures/vue-core-7553.vue > isProduction = false 1`] = `
"// vue-core-7553.js
import { defineComponent } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /*@__PURE__*/ defineComponent({
	__name: "vue-core-7553",
	props: {
		size: {
			type: String,
			required: false
		},
		color: {
			type: [String, Number],
			required: true
		},
		appearance: {
			type: String,
			required: true
		},
		note: {
			type: String,
			required: false
		}
	},
	setup(__props, { expose: __expose }) {
		__expose();
		const __returned__ = {};
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

var vueCore7553 = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { vueCore7553 as default };
"
`;

exports[`fixtures > tests/fixtures/vue-core-7553.vue > isProduction = true 1`] = `
"// vue-core-7553.js
import { defineComponent } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /*@__PURE__*/ defineComponent({
	__name: "vue-core-7553",
	props: {
		size: null,
		color: null,
		appearance: null,
		note: null
	},
	setup(__props, { expose: __expose }) {
		__expose();
		const __returned__ = {};
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

var vueCore7553 = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { vueCore7553 as default };
"
`;
